[gd_scene load_steps=25 format=3 uid="uid://d0jkyta4hb56f"]

[ext_resource type="Script" uid="uid://ddg1gdy43ys40" path="res://scenes/keyhole.gd" id="1_s27jt"]
[ext_resource type="AudioStream" uid="uid://p3naap0rvcrd" path="res://sounds/key-insert1.wav" id="4_kbisj"]
[ext_resource type="AudioStream" uid="uid://desxidsic5wxj" path="res://sounds/key-insert2.wav" id="5_da87b"]
[ext_resource type="AudioStream" uid="uid://ccqgog7hc0a5c" path="res://sounds/key-insert3.wav" id="6_l74ng"]
[ext_resource type="AudioStream" uid="uid://dec8jt4wyhkfn" path="res://sounds/key-insert4.wav" id="7_7b7qt"]
[ext_resource type="AudioStream" uid="uid://flraplyrw8m" path="res://sounds/key-remove1.wav" id="8_fbnex"]
[ext_resource type="AudioStream" uid="uid://dua6i8r3nmdib" path="res://sounds/key-remove2.wav" id="9_k0hi1"]
[ext_resource type="AudioStream" uid="uid://c4p46eb02qiwe" path="res://sounds/key-click1.wav" id="10_dcmcv"]
[ext_resource type="AudioStream" uid="uid://drvxi0l82lw0o" path="res://sounds/key-click2.wav" id="11_eeucg"]
[ext_resource type="AudioStream" uid="uid://difrmqmiuscrn" path="res://sounds/key-unclick1.wav" id="12_jbau3"]
[ext_resource type="AudioStream" uid="uid://cy6ayka7ypc36" path="res://sounds/key-unclick2.wav" id="13_pu2q1"]
[ext_resource type="AudioStream" uid="uid://dl0m8u543ujq" path="res://sounds/key-unclick3.wav" id="14_rfft4"]
[ext_resource type="AudioStream" uid="uid://cwf8xxehgeskb" path="res://sounds/key-small1.wav" id="15_hlhkl"]
[ext_resource type="AudioStream" uid="uid://b5gj8m746k318" path="res://sounds/key-small2.wav" id="16_r0w4b"]
[ext_resource type="AudioStream" uid="uid://pw1xliyyc4le" path="res://sounds/key-small3.wav" id="17_c3xx1"]
[ext_resource type="AudioStream" uid="uid://48nnrfanfo4m" path="res://sounds/key-small4.wav" id="18_j6wfx"]
[ext_resource type="AudioStream" uid="uid://dxlu1hh4v3mss" path="res://sounds/key-small5.wav" id="19_5yxsm"]
[ext_resource type="AudioStream" uid="uid://d1ax34edgifk5" path="res://sounds/key-small6.wav" id="20_yqyse"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5m3i7"]
radius = 0.091796875
height = 0.20484924

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hixa5"]
streams_count = 4
stream_0/stream = ExtResource("4_kbisj")
stream_1/stream = ExtResource("5_da87b")
stream_2/stream = ExtResource("6_l74ng")
stream_3/stream = ExtResource("7_7b7qt")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_j2o5m"]
streams_count = 2
stream_0/stream = ExtResource("8_fbnex")
stream_1/stream = ExtResource("9_k0hi1")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0gc5m"]
streams_count = 2
stream_0/stream = ExtResource("10_dcmcv")
stream_1/stream = ExtResource("11_eeucg")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_22e3x"]
streams_count = 3
stream_0/stream = ExtResource("12_jbau3")
stream_1/stream = ExtResource("13_pu2q1")
stream_2/stream = ExtResource("14_rfft4")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d7fjr"]
random_volume_offset_db = 5.0
streams_count = 6
stream_0/stream = ExtResource("15_hlhkl")
stream_1/stream = ExtResource("16_r0w4b")
stream_2/stream = ExtResource("17_c3xx1")
stream_3/stream = ExtResource("18_j6wfx")
stream_4/stream = ExtResource("19_5yxsm")
stream_5/stream = ExtResource("20_yqyse")

[node name="Keyhole" type="Node3D"]
script = ExtResource("1_s27jt")

[node name="CollisionArea" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 4
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.071)
shape = SubResource("CapsuleShape3D_5m3i7")

[node name="KeyLockMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.046323612, 0.14130442)

[node name="SndInsert" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = SubResource("AudioStreamRandomizer_hixa5")

[node name="SndRemove" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = SubResource("AudioStreamRandomizer_j2o5m")

[node name="SndClick" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = SubResource("AudioStreamRandomizer_0gc5m")

[node name="SndUnclick" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = SubResource("AudioStreamRandomizer_22e3x")

[node name="SndSmall" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = SubResource("AudioStreamRandomizer_d7fjr")
volume_db = -35.0

[node name="DebugCone" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, -1.6968045e-09, 0.03881836)
visible = false
radius = 0.0390625
height = 0.06689453
cone = true

[connection signal="activate" from="." to="." method="_on_activate"]
[connection signal="deactivate" from="." to="." method="_on_deactivate"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
[connection signal="body_exited" from="CollisionArea" to="." method="_on_collision_area_body_exited"]
